package Interfaces;

public interface Reflectable {
    String reflect(int otherLight);
}
