package PlanetObjects;

import Colors.Color;

public class Mountains extends PlanetObject{
    public Mountains(String name, int id, Color color) {
        super(name, id, color);
    }

}
