package Instruments;

public class IceAxe extends Instruments{
    public IceAxe(String type) {
        super(type);
        System.out.println("Получено достижение 'И кирка без дела ржавеет'");
    }
}
