package Interfaces;

public interface Shine {
    String shine();
}
