package Instruments;

public class GeoHammer extends Instruments{
    public GeoHammer(String type) {
        super(type);
        System.out.println("Получено достижение 'Каменный век'");
    }
}
