package Interfaces;

import CosmicObjects.CosmicObject;

public interface Affect {
    String affect(int affect, CosmicObject surface);
}
