package Interfaces;

/** This is interface for imagination */
public interface Imagine {
    void imagine();
}
