package Interfaces;

import Exceptions.SoundException;

public interface Sound {
    void sound() throws SoundException;
}
