package Interfaces;

import CosmicObjects.CosmicObject;

public interface Viewable {
    String getView(CosmicObject viewPoint);
}
